deploy/k8s/test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miao-coin-ai-server-service
  namespace: angrymiao-test
spec:
  selector:
    app: miao-coin-ai-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
